--- a/WebApp/main.css
+++ b/WebApp/main.css
@@ -1,7 +1,19 @@
+body {
+	font-family: 'Karla', serif;
+	overflow-x: hidden;
+}
+
 #header {
 	width: 100%;
+	height: 50px;
 	background-color: yellow;
+	padding-top: 5px;
+	text-align: center;
 }
+
+	#header h1 {
+		margin-top: 0px;
+	}
 #canvas {
 	border: 1px solid;
 }
