--- a/WebApp/main.css
+++ b/WebApp/main.css
@@ -6,7 +6,7 @@ body {
 #header {
 	width: 100%;
 	height: 50px;
-	background-color: yellow;
+	background-color: rgb(255, 255, 102);
 	padding-top: 5px;
 	text-align: center;
 }
@@ -14,11 +14,13 @@ body {
 	#header h1 {
 		margin-top: 0px;
 	}
+
 #canvas {
-	border: 1px solid;
-}
-#footer {
-	width: 100%;
-	background-color: blue;
+	border-top: 3px solid;
+	border-bottom: 3px solid;
 }
 
+.action-button {
+	width: 200px;
+	margin: 0px 50px;
+}
